--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@we5a/components-set",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "@stencil/core": "^2.0.1",
-    "face-api.js": "^0.22.2"
+    "face-api.js": "^0.22.2",
+    "uniqid": "^5.3.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "@stencil/angular-output-target": "^0.0.5"
+    "@stencil/angular-output-target": "^0.0.5",
+    "rollup-plugin-node-polyfills": "^0.2.1"
   }
 }
